--- a/src/index.less
+++ b/src/index.less
@@ -480,6 +480,12 @@ body {
     }
 }
 
+.buckets-container {
+    li {
+        cursor: pointer;
+    }
+}
+
 @keyframes Select-animation-spin {
     to {
         transform: rotate(1turn);
@@ -491,3 +497,4 @@ body {
         -webkit-transform: rotate(1turn);
     }
 }
+
